force-app/main/default/objects/Product2/fields/Accessories_Update__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update Accessory text field based on related products. If related products are incorrect, this field will not correct that. This must be done manually.</description>
    <inlineHelpText>Update Accessory text field based on related products. If related products are incorrect, this field will not correct that. This must be done manually.</inlineHelpText>
    <label>Accessories Update</label>
    <type>Checkbox</type>
</CustomField>