force-app/main/default/objects/Product2/fields/Accessory__c.field-meta.xml
<CustomField>
    <fullName>Accessory__c</fullName>
    <description>field to order the query on products so that accessories are on the bottom of the search results</description>
    <formula>Case(left(lower(Name),3) , &apos;wmk&apos; , 1 , &apos;vb-&apos;, 1, &apos;vpc&apos;, 1, &apos;sw-&apos;, 1 , &apos;lb-&apos;, 1, &apos;pj-&apos;,1, &apos;hb1&apos;,1,&apos;pgd&apos;,1, &apos;cb-&apos;,1, &apos;lcd&apos;,1,&apos;cs-&apos;,1, &apos;dvp&apos;,1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accessory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>