force-app/main/default/objects/Product2/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle</label>
    <type>Checkbox</type>
</CustomField>