force-app/main/default/objects/Product2/fields/CMS_Property_Map_Id__c.field-meta.xml
<CustomField>
    <fullName>CMS_Property_Map_Id__c</fullName>
    <externalId>true</externalId>
    <label>CMS Property Map Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>