force-app/main/default/objects/Product2/fields/Discontinued_Date__c.field-meta.xml
<CustomField>
    <fullName>Discontinued_Date__c</fullName>
    <description>Describes the date that this product will become discontinued. This is part of an integration.  Do not modify.</description>
    <inlineHelpText>The date this product will become discontinued</inlineHelpText>
    <label>Discontinued Date</label>
    <type>Date</type>
</CustomField>