force-app/main/default/objects/Product2/fields/Eval_Special_Approval__c.field-meta.xml
<CustomField>
    <fullName>Eval_Special_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if evaluation needs two layer special aprovals</description>
    <label>Eval Special Approval</label>
    <type>Checkbox</type>
</CustomField>