force-app/main/default/objects/Product2/fields/Evaluation_Price__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Price__c</fullName>
    <label>Evaluation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>