force-app/main/default/objects/Product2/fields/Hot_Swap_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Hot_Swap_Quantity__c</fullName>
    <label>Hot Swap Quantity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>