force-app/main/default/objects/Product2/fields/IFP_Size__c.field-meta.xml
<CustomField>
    <fullName>IFP_Size__c</fullName>
    <formula>if(left(Name,3) ==&apos;IFP&apos;,mid(Name,4,2),
if(left(Name,3) ==&apos;CDE&apos;,mid(Name,4,2),
if(left(Name,2) ==&apos;CD&apos;,mid(Name,3,2),
&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IFP Size</label>
    <type>Text</type>
</CustomField>