force-app/main/default/objects/Product2/fields/LandedCostChange__c.field-meta.xml
<CustomField>
    <fullName>LandedCostChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LandedCostChange</label>
    <type>Checkbox</type>
</CustomField>