force-app/main/default/objects/Product2/fields/List_Price_Canada__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Canada__c</fullName>
    <label>List Price Canada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>