force-app/main/default/objects/Product2/fields/List_Price_LA__c.field-meta.xml
<CustomField>
    <fullName>List_Price_LA__c</fullName>
    <label>List Price LA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>