force-app/main/default/objects/Product2/fields/Main_Products__c.field-meta.xml
<CustomField>
    <fullName>Main_Products__c</fullName>
    <label>Accessory to</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>