force-app/main/default/objects/Product2/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>if((left(Name,2) == &apos;EP&apos; &amp;&amp;  left(Name,3) != &apos;EP-&apos;),left(Name,4),
if(left(Name,3) == &apos;IFP&apos; ||
left(Name,3) == &apos;CDE&apos; ||
left(Name,3) == &apos;CDP&apos;  || 
left(Name,3) == &apos;PJD&apos;  ||
left(Name,3) == &apos;PJL&apos;,  
left(Name,5),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model</label>
    <type>Text</type>
</CustomField>