force-app/main/default/objects/Product2/fields/PM_Exists__c.field-meta.xml
<CustomField>
    <fullName>PM_Exists__c</fullName>
    <formula>Product_Manager__c &lt;&gt; &quot;&quot;</formula>
    <label>PM Exists</label>
    <type>Checkbox</type>
</CustomField>