force-app/main/default/objects/Product2/fields/Product_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Product_Accessories__c</fullName>
    <label>Product Accessories</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>