force-app/main/default/objects/Product2/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Manager object. easily update any changes to product line</description>
    <label>Product Pillar</label>
    <referenceTo>Product_Manager__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Product_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>