force-app/main/default/objects/Product2/fields/Product_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Email__c</fullName>
    <formula>Product_Line__r.Product_Manager__r.Email</formula>
    <label>Product Manager Email</label>
    <type>Text</type>
</CustomField>