force-app/main/default/objects/Product2/fields/Product_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Name__c</fullName>
    <formula>Product_Line__r.Product_Manager__r.FirstName &amp; &quot; &quot;&amp;Product_Line__r.Product_Manager__r.LastName</formula>
    <label>Product Manager Name</label>
    <type>Text</type>
</CustomField>