force-app/main/default/objects/Product2/fields/Product_Name_External__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_External__c</fullName>
    <externalId>true</externalId>
    <label>Product Name External</label>
    <length>255</length>
    <type>Text</type>
</CustomField>