force-app/main/default/objects/Product2/fields/Product_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Product_Pillar__c</fullName>
    <formula>Product_Line__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Pillar</label>
    <type>Text</type>
</CustomField>