force-app/main/default/objects/Product2/fields/Product_Property__c.field-meta.xml
<CustomField>
    <fullName>Product_Property__c</fullName>
    <formula>HYPERLINK(IF(TEXT($User.VS_Sub_Region__c) = &apos;VSE DE&apos;,&apos;https://www.viewsonic.com/de/products/&apos;&amp;LOWER(TEXT(Family))&amp;&apos;/&apos;&amp;ProductCode&amp;&apos;#specs&apos;,&apos;https://www.viewsonic.com/us/&apos;&amp;ProductCode&amp;&apos;#specs&apos; ), &apos;View Property&apos; )</formula>
    <label>Demo Only_Product Property</label>
    <type>Text</type>
</CustomField>