force-app/main/default/objects/Product2/fields/Product_Quantity_Sold__c.field-meta.xml
<CustomField>
    <fullName>Product_Quantity_Sold__c</fullName>
    <description>Created Field for hotswap project which shows how many products are sold</description>
    <label>Product Quantity Sold</label>
    <length>25</length>
    <type>Text</type>
</CustomField>