force-app/main/default/objects/Product2/fields/ProductSearch__c.field-meta.xml
<CustomField>
    <fullName>ProductSearch__c</fullName>
    <label>ProductSearch</label>
    <type>TextArea</type>
</CustomField>