force-app/main/default/objects/Product2/fields/ProductSearchField__c.field-meta.xml
<CustomField>
    <fullName>ProductSearchField__c</fullName>
    <label>ProductSearchField</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>