force-app/main/default/objects/Product2/fields/Push__c.field-meta.xml
<CustomField>
    <fullName>Push__c</fullName>
    <label>Push</label>
    <type>Date</type>
</CustomField>