force-app/main/default/objects/Product2/fields/Replacement_Product__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the product that will be replacing a discontinued product</description>
    <inlineHelpText>Product that is targeted to replace discontinued Product</inlineHelpText>
    <label>Replacement Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>