force-app/main/default/objects/Product2/fields/sample__c.field-meta.xml
<CustomField>
    <fullName>sample__c</fullName>
    <formula>right(Name,2)=&apos;-S&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sample</label>
    <type>Checkbox</type>
</CustomField>