force-app/main/default/objects/Product2/fields/Spa_Pricing_History__c.field-meta.xml
<CustomField>
    <fullName>Spa_Pricing_History__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Report/00O5c000006DWKOEA4/view/?fv1=&apos;&amp;Name, &apos;Spa Pricing &apos;&amp; Name )</formula>
    <label>Spa Pricing History</label>
    <type>Text</type>
</CustomField>