force-app/main/default/objects/Product2/fields/SpecialExtWarranty__c.field-meta.xml
<CustomField>
    <fullName>SpecialExtWarranty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows check for Warranties that are not available in certain countries. Using validation rules to ensure</description>
    <label>SpecialExtWarranty</label>
    <type>Checkbox</type>
</CustomField>