force-app/main/default/objects/Product2/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Describes the Unit of sale</description>
    <label>Unit</label>
    <length>40</length>
    <type>Text</type>
</CustomField>