force-app/main/default/objects/Product2/listViews/AllProductsActive.listView-meta.xml
<ListView>
    <fullName>AllProductsActive</fullName>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Product_Manager__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Line__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.QTY_SCHEDULE_ENABLED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>IFP</value>
    </filters>
    <label>All Active Products</label>
</ListView>