force-app/main/default/objects/Product2/listViews/NoPM.listView-meta.xml
<ListView>
    <fullName>NoPM</fullName>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Product_Line__c</columns>
    <columns>Product_Manager__c</columns>
    <columns>Product_Manager_Email__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Main</value>
    </filters>
    <label>No Product Pillar, No PM</label>
</ListView>